--- a/themes/datatogether/src/sass/components/_Footer.scss
+++ b/themes/datatogether/src/sass/components/_Footer.scss
@@ -5,7 +5,7 @@
   min-height: 200px;
   box-shadow: inset 0 0 8px rgba(0,0,0,0.35);
   a {
-    color: #3BB563;
+    color: $green;
     text-transform: uppercase;
     font-weight: bold;
   }
