--- a/themes/kross/layouts/_default/list.html
+++ b/themes/kross/layouts/_default/list.html
@@ -9,10 +9,11 @@
         {{ range .Data.Pages }}
         <div class="col-lg-4 col-sm-6 mb-4">
           <article class="card shadow">
-            <img class="rounded card-img-top" src="{{.Params.Image | absURL}}" alt="post-thumb">
+            <!-- <img class="rounded card-img-top" src="{{.Params.Image | absURL}}" alt="post-thumb"> -->
             <div class="card-body">
-              <h4 class="card-title"><a class="text-dark" href="{{.Permalink}}">{{.Title }}</a>
-              </h4>
+              <h3 class="card-title">
+                <a class="text-dark" href="{{.Permalink}}">{{.Title }}</a>
+              </h3>
               <p class="cars-text">{{.Summary}}</p>
               <a href="{{.Permalink}}" class="btn btn-xs btn-primary">Read More</a>
             </div>
