--- a/themes/kross/layouts/_default/single.html
+++ b/themes/kross/layouts/_default/single.html
@@ -1,15 +1,13 @@
 {{ define "main" }}
 
-  {{ partial "page-title.html" . }}
+  {{ partial "page-title-short.html" . }}
 
   <section class="section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <h3 class="font-tertiary mb-5">{{.Title}}</h3>
-          <p class="font-secondary">Published on {{ .PublishDate.Format "Jan 02, 2006" }} by <span class="text-primary">{{.Params.Author}}</span></p>
+        <div class="col-lg-10">
           <div class="content">
-            <img src="{{.Params.Image | absURL }}" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
+            <!-- <img src="{{.Params.Image | absURL }}" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4"> -->
             {{.Content }}
           </div>
         </div>
